--- a/FileFlux/Localization/App.Resources.en.resx
+++ b/FileFlux/Localization/App.Resources.en.resx
@@ -123,20 +123,26 @@
   <data name="DownloadErrorNotAnAttachment" xml:space="preserve">
     <value>The content is intended to be displayed in a browser.</value>
   </data>
+  <data name="DownloadStatusCancelled" xml:space="preserve">
+    <value>Cancelled</value>
+  </data>
   <data name="DownloadStatusCompleted" xml:space="preserve">
-    <value>Completed</value>
+    <value>Finished</value>
   </data>
   <data name="DownloadStatusFailed" xml:space="preserve">
     <value>Failed</value>
   </data>
   <data name="DownloadStatusInProgress" xml:space="preserve">
-    <value>In Progress</value>
+    <value>Downloading</value>
   </data>
   <data name="DownloadStatusNew" xml:space="preserve">
     <value>New</value>
   </data>
   <data name="DownloadStatusPaused" xml:space="preserve">
     <value>Paused</value>
+  </data>
+  <data name="ETagMismatchMessage" xml:space="preserve">
+    <value>The content on the server has changed since the initial download attempt (ETag mismatch).</value>
   </data>
   <data name="NewDownloadAddress" xml:space="preserve">
     <value>Address</value>
@@ -146,5 +152,8 @@
   </data>
   <data name="SettingsSaveLocation" xml:space="preserve">
     <value>Save Location:</value>
+  </data>
+  <data name="WindowFailureException" xml:space="preserve">
+    <value>Failed to create window.</value>
   </data>
 </root>
