--- a/FileFlux/Localization/App.Resources.resx
+++ b/FileFlux/Localization/App.Resources.resx
@@ -133,14 +133,23 @@
   <data name="DownloadStatusFailed" xml:space="preserve">
     <value>Failed</value>
   </data>
+  <data name="DownloadStatusGetMetadata" xml:space="preserve">
+    <value>Retrieving File Metadata</value>
+  </data>
   <data name="DownloadStatusInProgress" xml:space="preserve">
     <value>Downloading</value>
+  </data>
+  <data name="DownloadStatusMeasuring" xml:space="preserve">
+    <value>Measuring Optimal Download Performance</value>
   </data>
   <data name="DownloadStatusNew" xml:space="preserve">
     <value>New</value>
   </data>
   <data name="DownloadStatusPaused" xml:space="preserve">
     <value>Paused</value>
+  </data>
+  <data name="EmptyDownloadsView" xml:space="preserve">
+    <value>No downloads to display.</value>
   </data>
   <data name="ETagMismatchMessage" xml:space="preserve">
     <value>The content on the server has changed since the initial download attempt (ETag mismatch).</value>
@@ -154,12 +163,18 @@
   <data name="NoString" xml:space="preserve">
     <value>No</value>
   </data>
+  <data name="OriginFailureError" xml:space="preserve">
+    <value>The file on the server has changed since the download was initiated.</value>
+  </data>
   <data name="SettingsOverwrite" xml:space="preserve">
     <value>Overwrite existing files</value>
   </data>
   <data name="SettingsSaveLocation" xml:space="preserve">
     <value>Save Location:</value>
     <comment>Save Location Label in Settings Page</comment>
+  </data>
+  <data name="UnsupportedUriError" xml:space="preserve">
+    <value>The specified URI scheme is not supported.</value>
   </data>
   <data name="WindowFailureException" xml:space="preserve">
     <value>Failed to create window.</value>
